2015-12-11  Ola Jeppsson  <ola@adapteva.com>

	* e-utils/Makemodule.am: Add e-meshdump target.
	* e-utils/src/e-meshdump.c: New file.

2015-12-11  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/e-loader.c (clear_sram): Implemented.
	(e_load_group): Call clear_sram().
	(ee_set_core_config): Always set LOADER_BSS_CLEARED_FLAG.

2015-12-11  Ola Jeppsson  <ola@adapteva.com>

	* e-lib/src/e_coreid_get_coreid.c (e_get_coreid): Let compiler decide
	register for coreid_in_reg variable. Fix error in inline assembly,
	coreid_in_reg is an output, not input.
	* e-lib/src/e_mutex_lock.c (e_mutex_lock): Make lock variable hold
	THIS coreid when THIS core takes the lock.

2015-12-11  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/e-loader.c (loader_sections): Add struct.
	(section_info): Add struct.
	(loader_cfg): Add struct.
	(e_load_group): Call lookup_section().
	(lookup_sections): Implemented.
	(ee_set_core_config): Add table parameter. Take section offset from
	table instead of using hard coded values.

2015-12-11  Ola Jeppsson  <ola@adapteva.com>

	* bsps/parallella64/fast.ldf (loader_cfg): Add output section.
	* bsps/parallella64/internal.ldf: Likewise.
	* bsps/parallella_E16G3_1GB/fast.ldf: Likewise.
	* bsps/parallella_E16G3_1GB/internal.ldf: Likewise.

2015-12-10  Ola Jeppsson  <ola@adapteva.com>

	* bsps/parallella64/fast.ldf (workgroup_cfg): Rename section from
	workgroup_config. Force allocation even if empty.
	(ext_mem_cfg): Rename from external_mem_config. Force allocation even
	if empty.
	* bsps/parallella64/internal.ldf: Likewise.
	* bsps/parallella_E16G3_1GB/fast.ldf: Likewise.
	* bsps/parallella_E16G3_1GB/internal.ldf: Likewise.

2015-12-08  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany-hal.c (e_finalize): If target is esim, disconnect
	with stop parameter set to true.
	* e-hal/src/esim-target.h (esim_ops): Add stop parameter to
	client_disconnect to match esim.h

2015-12-07  Ola Jeppsson  <ola@adapteva.com>
