@@ -28,6 +28,7 @@
 
 #define MAX_SHM_REGIONS				   64
 
+#include <stdint.h>
 #include <sys/types.h>
 #include "e_common.h"
 #include "e_mem.h"
@@ -49,29 +50,41 @@
 
 /** Shared memory segment */
 typedef struct ALIGN(8) e_shmseg {
-	void	*addr;		  /* Virtual address */
+	union {
+		void	*addr;		  /* Virtual address */
+		uint64_t __fill1;
+	};
 	char	 name[256];	  /* Region name */
-	size_t	 size;		  /* Region size in bytes */
-	void	*paddr;		  /* Physical Address accessible from Epiphany cores */
-	off_t	 offset;	  /* Offset from shm base address */
+	uint64_t size;		  /* Region size in bytes */
+	union {
+		void	*paddr;		  /* Physical Address accessible from Epiphany cores */
+		uint64_t __fill2;
+	};
+	uint64_t offset;	  /* Offset from shm base address */
 } e_shmseg_t;
 
 typedef struct ALIGN(8) e_shmseg_pvt	{
 	e_shmseg_t	shm_seg;  /* The shared memory segment */
-	unsigned	refcnt;	  /* host app reference count */
-	unsigned	valid;	  /* 1 if the region is in use, 0 otherwise */
+	uint32_t	refcnt;	  /* host app reference count */
+	uint32_t	valid;	  /* 1 if the region is in use, 0 otherwise */
 } e_shmseg_pvt_t;
 
 typedef struct ALIGN(8) e_shmtable {
-	unsigned int	 magic;
-	unsigned int	 initialized;
-	e_shmseg_pvt_t	 regions[MAX_SHM_REGIONS];
-	unsigned int	 free_space;
-	off_t			 next_free_offset;
-	unsigned long	 paddr_epi;	/* Physical address of the shm region as seen by epiphany */
-	unsigned long	 paddr_cpu;	/* Physical address of the shm region as seen by the host cpu */
-	char			*heap;
-	void			*lock;		/* User-space semaphore (sem_t* on e-hal side) */
+	uint32_t		magic;
+	uint32_t		initialized;
+	e_shmseg_pvt_t	regions[MAX_SHM_REGIONS];
+	uint64_t		free_space;
+	uint64_t		next_free_offset;
+	uint64_t		paddr_epi;	/* Physical address of the shm region as seen by epiphany */
+	uint64_t		paddr_cpu;	/* Physical address of the shm region as seen by the host cpu */
+	union {
+		uint8_t		*heap;
+		uint64_t	__fill1;
+	};
+	union {
+		void		*lock;		/* User-space semaphore (sem_t* on e-hal side) */
+		uint64_t	__fill2;
+	};
 } e_shmtable_t;
 
 #pragma pack(pop)
